--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>me.desht</groupId>
 	<artifactId>autohop</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1</version>
 	<name>AutoHop</name>
 	<url>http://maven.apache.org</url>
 	<properties>
