--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: AutoHop
 main: me.desht.autohop.AutoHop
 author: desht
 website: http://dev.bukkit.org/server-mods/autohop
-version: 1.2
+version: ${project.version}
 description: Automatically jump up slopes, one-block-high walls etc.
 permissions:
   autohop.hop:
