--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>me.desht</groupId>
 	<artifactId>autohop</artifactId>
 	<packaging>jar</packaging>
-	<version>1.3</version>
+	<version>1.4</version>
 	<name>AutoHop</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.3.1-R2.0</version>
+			<version>RELEASE</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
