--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>me.desht</groupId>
 	<artifactId>autohop</artifactId>
 	<packaging>jar</packaging>
-	<version>1.4</version>
+	<version>1.5-SNAPSHOT</version>
 	<name>AutoHop</name>
 	<url>http://maven.apache.org</url>
 	<properties>
@@ -16,32 +16,18 @@
 			<artifactId>bukkit</artifactId>
 			<version>RELEASE</version>
 			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+                <dependency>
+                        <groupId>org.mcstats.bukkit</groupId>
+                        <artifactId>metrics-lite</artifactId>
+                        <version>R7</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
+                </dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.name}</finalName>
 		<plugins>
-			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<additionalProjectnatures>
-						<projectnature>org.eclipse.m2e.core.maven2Nature</projectnature>
-					</additionalProjectnatures>
-					<buildcommands>
-						<buildcommand>org.eclipse.jdt.core.javabuilder</buildcommand>
-						<buildcommand>org.eclipse.m2e.core.maven2Builder</buildcommand>
-					</buildcommands>
-					<useProjectReferences>false</useProjectReferences>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -51,6 +37,28 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-shade-plugin</artifactId>
+                                <version>1.5</version>
+                                <executions>
+                                    <execution>
+                                        <phase>package</phase>
+                                        <goals>
+                                            <goal>shade</goal>
+                                        </goals>
+                                        <configuration>
+                                            <minimizeJar>true</minimizeJar>
+                                            <relocations>
+                                                <relocation>
+                                                    <pattern>org.mcstats</pattern>
+                                                    <shadedPattern>me.desht.autohop.mcstats</shadedPattern>
+                                                </relocation>
+                                            </relocations>
+                                        </configuration>
+                                    </execution>
+                                </executions>
+                        </plugin>
 		</plugins>
 		<resources>
 			<resource>
@@ -67,5 +75,9 @@
 			<id>bukkit-repo</id>
 			<url>http://repo.bukkit.org/content/groups/public</url>
 		</repository>
+                <repository>
+                        <id>Plugin Metrics</id>
+                        <url>http://repo.mcstats.org/content/repositories/public</url>
+                </repository>
 	</repositories>
 </project>
