--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,11 @@ author: desht
 website: http://dev.bukkit.org/server-mods/autohop
 version: ${project.version}
 description: Automatically jump up slopes, one-block-high walls etc.
+commands:
+  ahop:
+    description: Toggle auto-hop enablement
+    permission: autohop.hop
+    usage: /<command>
 permissions:
   autohop.hop:
     description: Allows players to auto-hop
